--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,3 @@
 theme: jekyll-theme-cayman
 title: A Place For 航's Head
-description: WoW
-footer-links: 
-  github: none
-  instagram: Antulyn
+description: 一个独特的灵魂
