--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,8 @@
 theme: minima
 title: A Place For 航's Head
 description: 一个独特的灵魂
+&copy; #YEAR# 航
+  [MIT License](https://opensource.org/license/mit/)
 
 
 
