--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,10 @@
 theme: minima
 title: A Place For 航's Head
 description: 一个独特的灵魂
-
+highlighter: rouge
+markdown: kramdown
+kramdown:
+  input: GFM
 
 
 copyright: >-
