--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 theme: minima
 title: A Place For 航's Head
-description: 一个独特的灵魂
+description: An unique soul with curiousity
 highlighter: rouge
 markdown: kramdown
 kramdown:
