--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme: jekyll-theme-minimal
+theme: minima
 title: A Place For 航's Head
 description: An unique soul with curiousity
 highlighter: rouge
